# byi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.codex/skills/by-github-npm-publish/: SKILL.md
.codex/skills/by-github-npm-publish/agents/: openai.yaml
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  sync.rs  tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/webdav/: Cargo.toml
crates/webdav/src/: lib.rs
docs/: release-process.md
docs/superpowers/plans/: 2026-05-15-rust-cli-workspace.md
scripts/: install.ps1  install.sh
src/: app.rs  cli.rs  main.rs  output.rs  sync.rs
src/sync/: config.rs  prompt.rs  tests.rs
